zola (0.14.1-1) unstable; urgency=medium

  * New upstream release

 -- Martin Simon <me@martinsimon.me>  Tue, 24 Aug 2021 00:00:00 +0000

zola (0.14.0-1) unstable; urgency=medium

  * New upstream release

 -- Martin Simon <me@martinsimon.me>  Tue, 20 Jul 2021 00:00:00 +0000

zola (0.13.0-2) unstable; urgency=medium

  * strip binary (Closes: #1)

 -- Martin Simon <me@martinsimon.me>  Thu, 29 Apr 2021 00:00:00 +0000

zola (0.13.0-1) unstable; urgency=medium

  * Version 0.13.0

 -- Martin Simon <me@martinsimon.me>  Fri, 16 Apr 2021 00:00:00 +0000