@@ -1,6 +1,8 @@
 zola (0.14.1-1) unstable; urgency=medium
 
   * New upstream release
+  * Bullseye is now stable
+  * Improve Debian version and package name handling in Github Action
 
  -- Martin Simon <me@martinsimon.me>  Tue, 24 Aug 2021 00:00:00 +0000
 
